Fixing overflow of environment site links.

--- a/themes/boots/boots.css
+++ b/themes/boots/boots.css
@@ -9,3 +9,7 @@ body.admin-menu .navbar-static-top {
 
 }
 
+.devshop-environment > a.site-link {
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
